--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ kiwisolver==1.0.1
 matplotlib==2.2.2
 memory-profiler==0.52.0
 numpy==1.14.3
+pandas==0.22.0
 psutil==5.4.5
 pyparsing==2.2.0
 python-dateutil==2.7.2
